# cordova-android-docker

./: Dockerfile  README.md  cordova
cordova-plugin-ndk-echo/: package.json  plugin.xml
cordova-plugin-ndk-echo/scripts/: update_build_gradle.js
cordova-plugin-ndk-echo/src/android/: NdkEcho.java  build-extras.gradle
cordova-plugin-ndk-echo/src/android/jni/: CMakeLists.txt  echo.cpp
cordova-plugin-ndk-echo/www/: ndk_echo.js
